# cg3-path-tracer

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md
apps/: main_rt.cpp  refrac_test.cpp
cpp/apps/: linear_diffusion.cpp  main_pt.cpp
cpp/include/cg3/common/: area_light.hpp  box.hpp  camera.hpp  cylinder.hpp  directional_light.hpp  image_io.hpp  kd_tree.hpp  light_source.hpp  mat.hpp  material.hpp  obj_reader.hpp  phong.hpp  plane.hpp  point_light.hpp  primitive.hpp  ray.hpp  scene.hpp  test_scenes.hpp  transformation_group.hpp  triangle.hpp  vec.hpp
cpp/include/cg3/manager/: progressive_strategy.hpp  strategy.hpp  tile.hpp  tiled_image.hpp
cpp/include/cg3/pathtracer/: pathtracer.hpp
cpp/include/cg3/raytracer/: raytracer.hpp
cpp/src/common/: box.cpp  camera.cpp  cylinder.cpp  directional_light.cpp  kd_tree.cpp  light_source.cpp  material.cpp  phong.cpp  primitive_group.cpp  renderer.cpp  spot_light.cpp  test_scenes.cpp
cpp/src/manager/: strategy.cpp
cpp/src/raytracer/: raytracer.cpp
include/cg3/common/: blinn_phong.hpp  intersection_info.hpp  primitive_group.hpp  renderer.hpp  si_units.hpp  sphere.hpp  spot_light.hpp  timing.hpp  tiny_vec.hpp  utils.hpp
include/cg3/manager/: render_manager.hpp
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/linalg/: mod.rs  vec3.rs  vector.rs
src/common/: area_light.cpp  blinn_phong.cpp  intersection_info.cpp  plane.cpp  point_light.cpp  primitive.cpp  scene.cpp  sphere.cpp  transformation_group.cpp  triangle.cpp
src/manager/: progressive_strategy.cpp  render_manager.cpp  tiled_image.cpp
src/pathtracer/: pathtracer.cpp
